# HybridFrep

./: CMakeLists.txt  README.md
HFRep2D/: CMakeLists.txt
HFRep2D/HFRep2D_lib/: CMakeLists.txt
HFRep2D/HFRep2D_lib/DF/include/: ddt2D.h  eikonalSolver2D.h  interpolation.h  interpolation2D.h
HFRep2D/HFRep2D_lib/DF/src/: ddt2D.cpp  eikonalSolver2D.cpp  interpolation.cpp  interpolation2D.cpp
HFRep2D/HFRep2D_lib/DataStructures/include/: activeList.h  helperFunctions.h  helperFunctions.hpp  quadTree.h  quadTreeRender.h
HFRep2D/HFRep2D_lib/DataStructures/src/: quadTree.cpp  quadTreeRender.cpp
HFRep2D/HFRep2D_lib/HFRep/include/: frep2D.h  hfrep2D.h  microstructures2D.h  render2D.h
HFRep2D/HFRep2D_lib/HFRep/src/: frep2D.cpp  hfrep2D.cpp  microstructures2D.cpp  render2D.cpp
HFRep2D/HFRep2D_lib/HelperFunctions/include/: timer.hpp
HFRep2D/HFRep2D_lib/include/: ddt2D.h  frep2D.h  hfrep2D.h  interpolation2D.h  microstructures2D.h  render2D.h
HFRep2D/HFRep2D_lib/src/: ddt2D.cpp  frep2D.cpp  hfrep2D.cpp  interpolation2D.cpp  microstructures2D.cpp  render2D.cpp
HFRep2D/Samples/: CMakeLists.txt
HFRep2D/sample1/: sample1.cpp
HFRep2D/sample2/: CMakeLists.txt  sample2.cpp
HFRep2D/sample3/: sample3.cpp
HFRep2D/sample4/: CMakeLists.txt  sample4.cpp
HFRep3D/: CMakeLists.txt
HFRep3D/HFRep3D_lib/: CMakeLists.txt
HFRep3D/HFRep3D_lib/HFRep/include/: frep3D.h  helperFunctions3D.hpp  hfrep3D.h  material.h  volumetricObj.h
HFRep3D/HFRep3D_lib/HFRep/src/: frep3D.cpp  hfrep3D.cpp  material.cpp  volumetricObj.cpp
HFRep3D/HFRep3D_lib/HelperFunctions/: timer.hpp
HFRep3D/HFRep3D_lib/OpenGL_api/include/: mesh.h  shader.h  skybox.h  texture.h
HFRep3D/HFRep3D_lib/OpenGL_api/shaders/: VertSkyBoxShader.vert
HFRep3D/HFRep3D_lib/OpenGL_api/src/: mesh.cpp  shader.cpp  skybox.cpp  texture.cpp
HFRep3D/HFRep3D_lib/UDF/include/: ddt3D.h  fastIterativeMethod3D.h  interpolation3D.h
HFRep3D/HFRep3D_lib/UDF/src/: ddt3D.cpp  fastIterativeMethod3D.cpp  interpolation3D.cpp
HFRep3D/HFRep3D_lib/WindowCamera/include/: SFMLwindow.h  camera.h
HFRep3D/HFRep3D_lib/WindowCamera/src/: SFMLwindow.cpp  camera.cpp
HFRep3D/HFRep3D_lib/include/: arcBallCamera.h  camera.h  ddt3D.h  frep3D.h  hfrep3D.h  interpolation.h  light.h  shader.h  skybox.h  texture.h  volumetricObj.h  window.h
HFRep3D/HFRep3D_lib/shaders/: FragHFRepShader.frag  VertHFRepShader.vert  VertSkyBoxShader.vert
HFRep3D/HFRep3D_lib/src/: arcBallCamera.cpp  camera.cpp  ddt3D.cpp  frep3D.cpp  hfrep3D.cpp  interpolation.cpp  light.cpp  material.cpp  mesh.cpp  shader.cpp  skybox.cpp  texture.cpp  volumetricObj.cpp  window.cpp
HFRep3D/sample3D_sfml/: CMakeLists.txt
HFRep3D/sample3D_sfml/shaders/: FragHFRepShader.frag
HFRep3D/sample3D_sfml/src/: 3d_sample_sfml.cpp
HIDF/: CMakeLists.txt
HIDF/HFRepIDF/: CMakeLists.txt
HIDF/HFRepIDF/include/: OperationsOverFields.h  barycentricCoords.h  frep2D.h  frep3D.h  interiorDistanceField.h  proceduralNoise.h
HIDF/HFRepIDF/src/: OperationsOverFields.cpp  barycentricCoords.cpp  frep2D.cpp  frep3D.cpp  interiorDistanceField.cpp  proceduralNoise.cpp
HIDF/samples/: CMakeLists.txt  diffMapsTest.cpp  idfClassTest.cpp
HSDF/: CMakeLists.txt
HSDF/HFRep2D/HFRep2D_lib/: CMakeLists.txt
HSDF/HFRep2D/HFRep2D_lib/DF/include/: FIM2D.h  interpolation2D.h
HSDF/HFRep2D/HFRep2D_lib/DF/src/: FIM2D.cpp  interpolation2D.cpp  seddt2D.cpp
HSDF/HFRep2D/HFRep2D_lib/HFRep/include/: fractals2D.h  frep2D.h  hfrep2D.h  microstructures2D.h
HSDF/HFRep2D/HFRep2D_lib/HFRep/src/: fractals2D.cpp  frep2D.cpp  hfrep2D.cpp  microstructures2D.cpp  render2D.cpp
HSDF/HFRep2D/HFRep2D_lib/Materials/: proceduralNoise.cpp  proceduralNoise.h
HSDF/HFRep2D/Samples/: CMakeLists.txt  quadTree_sample.cpp  robot2DSample.cpp  sample3.cpp  sample_continuity.cpp  sample_diff_Functions.cpp  sample_fractals.cpp  sample_heart_word.cpp  sample_shape.cpp  sample_zooming_hfrep.cpp  test_R_functions_euclead.cpp
HSDF/HFRep3D/HFRep3D_lib/: CMakeLists.txt
HSDF/HFRep3D/HFRep3D_lib/Attributes/include/: proceduralNoise.h  volumetricAttribute.h
HSDF/HFRep3D/HFRep3D_lib/Attributes/src/: proceduralNoise.cpp  volumetricAttribute.cpp
HSDF/HFRep3D/HFRep3D_lib/HFRep/include/: frep3D.h  hfrep3D.h  microstructures.h  volumetricObj.h
HSDF/HFRep3D/HFRep3D_lib/HFRep/src/: frep3D.cpp  hfrep3D.cpp  microstructures.cpp  volumetricObj.cpp
HSDF/HFRep3D/HFRep3D_lib/HelperFunctions/: timer.hpp
HSDF/HFRep3D/HFRep3D_lib/OpenGL_api/include/: shader.h
HSDF/HFRep3D/HFRep3D_lib/OpenGL_api/shaders/: FragHFRepShader.frag  VertHFRepShader.vert
HSDF/HFRep3D/HFRep3D_lib/OpenGL_api/src/: light.cpp  shader.cpp
HSDF/HFRep3D/HFRep3D_lib/UDF/include/: FIM3D.h  interpolation3D.h  vcvdt3D.h
HSDF/HFRep3D/HFRep3D_lib/UDF/src/: FIM3D.cpp  interpolation3D.cpp  vcvdt3D.cpp
HSDF/HFRep3D/HFRep3D_lib/WindowCamera/include/: SFMLwindow.h  camera.h
HSDF/HFRep3D/HFRep3D_lib/WindowCamera/src/: SFMLwindow.cpp  camera.cpp
HSDF/HFRep3D/archive/files_tmp/sample3D_1/: CMakeLists.txt
HSDF/HFRep3D/archive/files_tmp/sample3D_1/include/: FRep.h  interactions.h
HSDF/HFRep3D/archive/files_tmp/sample3D_1/kernels/: device_funcs.cu  device_funcs.cuh  kernel.cu  kernel.h
HSDF/HFRep3D/archive/files_tmp/sample3D_1/src/: FRep.cpp  main.cpp
HSDF/HFRep3D/archive/sample3D_1/: CMakeLists.txt
HSDF/HFRep3D/archive/sample3D_1/src/: 3d_sample.cpp
HSDF/HFRep3D/sample3D_sfml/: CMakeLists.txt
HSDF/HFRep3D/sample3D_sfml/src/: 3d_sample_sfml1.cpp  3d_sample_sfml2.cpp
cmake/: FindGTS.cmake  FindGlib.cmake  FindSOIL.cmake
test_2D/: CMakeLists.txt
test_2D/HFRep/: CMakeLists.txt
test_2D/HFRep/include/: DrawField.h  HFRep.h
test_2D/HFRep/src/: DDT.cpp  DrawField.cpp  HFRep.cpp  ddt2D.cpp
test_2D/include/: DDT.h  DrawField.h  FRep.h  ModifyField.h
test_2D/sample1/: CMakeLists.txt  sample1.cpp
test_2D/sample2/: CMakeLists.txt  sample2.cpp
test_2D/sample2/include/: DrawField.h  ModifyField.h  ddt2D.h
test_2D/src/: DDT.cpp  DrawField.cpp  FRep.cpp  ModifyField.cpp  hfrep_2D_sample.cpp
test_3D/: CMakeLists.txt
test_3D/src/: hfrep_3D_sample.cpp
(+28 files in other folders)
